<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    tools:context="com.alburagh.alburagh.Fragments.Account.AccountChangePasswordFragment">

    <com.alburagh.alburagh.UI.AlburaghTextView
        android:id="@+id/change_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/change_pass_title"
        android:textSize="20sp" />

    <com.alburagh.alburagh.UI.AlburaghTextView
        android:id="@+id/error_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/change_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textColor="#F00"
        android:textSize="15sp" />

    <com.alburagh.alburagh.UI.AlburaghEditText
        android:id="@+id/change_current_password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/error_label"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/account_edittext_bg"
        android:hint="@string/change_old_pass_hint"
        android:inputType="textPassword" />

    <com.alburagh.alburagh.UI.AlburaghEditText
        android:id="@+id/change_new_password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/change_current_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/account_textedit_margin_top"
        android:background="@drawable/account_edittext_bg"
        android:hint="@string/change_new_password_hint"
        android:inputType="textPassword" />

    <com.alburagh.alburagh.UI.AlburaghEditText
        android:id="@+id/change_confirm_new_password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/change_new_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/account_textedit_margin_top"
        android:background="@drawable/account_edittext_bg"
        android:hint="@string/change_confirm_new_password_hint"
        android:inputType="textPassword" />

    <com.alburagh.alburagh.UI.AlburaghButton
        android:id="@+id/change_submit"
        android:layout_width="@dimen/account_button_width"
        android:layout_height="@dimen/account_button_height"
        android:layout_below="@id/change_confirm_new_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/change_submit_text" />

    <com.alburagh.alburagh.UI.AlburaghTextView
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/change_submit"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:text="@string/account_back" />

</RelativeLayout>