<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    tools:context="com.alburagh.alburagh.Fragments.Account.AccountDetailsFragment">

    <com.alburagh.alburagh.UI.AlburaghTextView
        android:id="@+id/details_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:lineSpacingMultiplier="1.2"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/account_details_title"
        android:textSize="20sp" />

    <com.alburagh.alburagh.UI.AlburaghTextView
        android:id="@+id/change_password_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/details_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:clickable="true"
        android:text="@string/account_details_change_password_text" />

    <com.alburagh.alburagh.UI.AlburaghTextView
        android:id="@+id/logout_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/change_password_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:clickable="true"
        android:text="@string/account_details_logout" />

</RelativeLayout>
