<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    tools:context="com.alburagh.alburagh.Fragments.Account.AccountLoginFragment">

    <RelativeLayout
        android:id="@+id/buy_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/bought_layout"
        android:layout_toEndOf="@+id/bought_layout">

        <com.alburagh.alburagh.UI.AlburaghTextView
            android:id="@+id/details_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/login_title"
            android:textSize="20sp" />

        <com.alburagh.alburagh.UI.AlburaghTextView
            android:id="@+id/error_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/details_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:textColor="#F00"
            android:textSize="15sp" />

        <com.alburagh.alburagh.UI.AlburaghEditText
            android:id="@+id/login_email"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/error_label"
            android:layout_centerHorizontal="true"
            android:background="@drawable/account_edittext_bg"
            android:gravity="start"
            android:hint="@string/login_email_hint"
            android:inputType="textEmailAddress"
            android:singleLine="true" />

        <com.alburagh.alburagh.UI.AlburaghEditText
            android:id="@+id/login_password"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_email"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:background="@drawable/account_edittext_bg"
            android:gravity="start"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"
            android:singleLine="true" />

        <com.alburagh.alburagh.UI.AlburaghButton
            android:id="@+id/login_submit"
            android:layout_width="@dimen/account_button_width"
            android:layout_height="@dimen/account_button_height"
            android:layout_below="@id/login_password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:textSize="16sp"
            android:text="@string/login_submit_text" />

        <com.alburagh.alburagh.UI.AlburaghTextView
            android:id="@+id/forgot_password_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_submit"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:clickable="true"
            android:textSize="16sp"
            android:text="@string/login_forgot_password_text"
            android:layout_marginBottom="15dp" />



    </RelativeLayout>

</RelativeLayout>